fixed the div overflow issue on the screen

--- a/stylesheets/owlfg_styling.css
+++ b/stylesheets/owlfg_styling.css
@@ -10,19 +10,19 @@ body {
     width: 100%;
     height: 100%;
     padding-top: 50px;
+    overflow-y:hidden;
+
   }
 
 .active:hover {
-    /*
-	background-color:;
-    */
+	/*color:;*/
 }
 
-.active {
-    /*
-    background-color:;
+.navbar-default .navbar-nav > .active > a {
+    color: #2F2526;
+    background-color:#FF6600;
 	font-weight: bold;
-    */
+    
 }
 
 .navbar-default {
@@ -51,8 +51,9 @@ body {
 	min-height: 100%;
     height:auto !important; /* cross-browser */
     height: 100%;           /* cross-browser */;
-    border-style: solid;
-    border-width: 1px;
+    border-top: 1px solid #000;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
     /*
     background-color: #000;
     */
@@ -88,10 +89,11 @@ body {
 
 #results {
     float: right;
-    height: 85%;
+    height: 80%;
     width: 75%;
-    border-style: solid;
-    border-width: 1px;
+    border-top: 1px solid #000;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
 }
 
 #results-div {
